--- a/motionblinds/motionblinds-gateway.html
+++ b/motionblinds/motionblinds-gateway.html
@@ -2,7 +2,7 @@
     RED.nodes.registerType('motionblinds-gateway',{
         category: 'config',
         defaults: {
-            name: {value: ""},
+            name: {value: null},
             apikey: {value:"apikey",required:true},
         },
         label: function() {
